--- a/templates/calc.html
+++ b/templates/calc.html
@@ -6,21 +6,21 @@
         <fieldset class = "form-group">
             <legend class = "border-bottom mb-4">Для отримання результату введіть наступну інформацію:</legend>
             {{ form.hidden_tag() }}
-            {% for field in form if field.widget.input_type != 'hidden' and field.type != 'SubmitField' %}
-                <div class = "form-group">
-                  {{ field.label(class = "form-control-label") }}
-                    {% if not field %}
-                         {{ field(class = "form-control form-control-lg is-invalid") }}
-                            <div class = "invalid-feedback">
-                                {% for errors in field.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                    {% else %}
-                        {{ field(class = "form-control form-control=lg") }}
-                    {% endif %}
-                </div>
-            {% endfor %}
+            <dl>
+                {% for field in form if field.widget.input_type != 'hidden' and field.type != 'SubmitField' %}
+                    <dt> {{ field.label }}
+                    {{ field }}
+                    <dd>
+                    {% if field.errors %}
+                        <ul class=errors>
+                             {% for error in field.errors %}
+                                <li>{{ error }}</li>
+                             {% endfor %}
+                         </ul>
+                   {% endif %}
+                    </dd>
+                {% endfor %}
+            </dl>
         </fieldset>
         <div class = "form-group">
             {{ form.submit(class = "btn btn-outline-info") }}
