welcome.html update

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,8 +18,11 @@
 </nav>
 <div>
   <p align="center" style="font-size:20px">
-    Розрахунково-графічна робота із дисципліни «Алгоритми і системи комп’ютерної математики»
+    Проект із дисципліни «Математичне моделювання»
     на тему «Оптимізація кількості транспортних засобів на маршруті»
+  </p>
+  <p align="center" style="font-size:20px">
+    студента групи КМ-71 Ліхачова А.
   </p>
   <p align="center" style="font-size:18px">
     Загальна інформація
@@ -27,7 +30,9 @@
   <p style="text-indent:50px; font-size:15px">
     При написанні цієї роботи використовувалась система контролю версій, були досліджені документації використаних
     бібліотек. Застосунок працює з визначеними типами даними та використовує симплекс-метод для отримання результатів.
-    Результат дозволяє отримати уявлення про можливість зменшення витрат на експлуатацію маршрута.
+    Результат дозволяє отримати уявлення про можливість зменшення витрат на експлуатацію маршрута, виконавши мінімізацію
+    цільової функції (кількість транспортних засобів на маршруті в певний час доби) за обмеженнями по мінімальній необхідній
+    кількості одиниць транспорту згідно максимального пасажиропотоку.
   </p>
 </div>
 <div class="container">
