--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,7 +18,7 @@
 </nav>
 <div>
   <p align="center" style="font-size:20px">
-    Проект із дисципліни «Математичне моделювання»
+    Проект із дисципліни «Теорія керування»
     на тему «Оптимізація кількості транспортних засобів на маршруті»
   </p>
   <p align="center" style="font-size:20px">
